[package]
name = "cortenforge"
description = "The CortenForge SDK facade — one stable dependency that re-exports the public SDK crates. Applications depend on this single crate and reach the SDK through it (cortenforge::cf_cast, cortenforge::mesh_io, …) so the SDK's internal crate structure can evolve behind one contract. See MISSION.md."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

# The SDK public surface. Aggregates the L0/L0-io/L0-integration library crates,
# so it is itself L0-integration. It is deliberately Bevy-free: it re-exports
# cf-device-types WITHOUT that crate's optional `bevy` feature, so the facade
# (and every app compiling against it) stays headless.
[package.metadata.cortenforge]
tier = "L0-integration"

[lints]
workspace = true

[dependencies]
# Each dependency is re-exported verbatim from src/lib.rs — the facade adds no
# logic, so every dep's justification is "it IS part of the SDK public surface."
# Re-exported as `cortenforge::cf_cap_planes` — cap-plane parsing.
cf-cap-planes = { workspace = true }
# Re-exported as `cortenforge::cf_cast` — multi-material mold generation.
cf-cast = { workspace = true }
# Re-exported as `cortenforge::cf_cast_cli` — the scan→cast bridge.
cf-cast-cli = { workspace = true }
# Re-exported as `cortenforge::cf_design` — implicit-surface design kernel.
cf-design = { workspace = true }
# Re-exported as `cortenforge::cf_device_types` — device-design domain types.
# Its `bevy` feature is intentionally NOT enabled — the facade stays headless.
cf-device-types = { workspace = true }
# Re-exported as `cortenforge::cf_scan_prep_core` — headless scan-prep.
cf-scan-prep-core = { workspace = true }
# Re-exported as `cortenforge::mesh_io` — mesh I/O; `threemf` for 3MF scans.
mesh-io = { workspace = true, features = ["threemf"] }
# Re-exported as `cortenforge::mesh_repair` — mesh repair / welding.
mesh-repair = { workspace = true }
# Re-exported as `cortenforge::mesh_types` — core mesh types.
mesh-types = { workspace = true }
