[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Development automation and quality enforcement for CortenForge"
license = "Apache-2.0"
publish = false

# This is a dev-only tool, not published to crates.io
# See: https://github.com/matklad/cargo-xtask

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Colored terminal output
owo-colors = "4"

# Error handling
anyhow = "1"

# Process execution
xshell = "0.2"

# Regex for safety checks
regex = "1"

# TOML parsing for Cargo.toml analysis
toml = "1.1"

# Serde for config parsing
serde = { version = "1", features = ["derive"] }

# JSON parsing for cargo metadata output
serde_json = "1"

# Walking directories
walkdir = "2"

# Date/time for completion records
chrono = "0.4"

# Finding executables in PATH
which = "8"
