[package]
name = "cf-design"
description = "Implicit surface design kernel for CortenForge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cf-geometry = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
sim-mjcf = { workspace = true }
