[package]
name = "cf-design"
description = "Implicit surface design kernel for CortenForge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.cortenforge]
tier = "L0"

[lints]
workspace = true

[dependencies]
# Geometric primitives (workspace)
cf-geometry = { workspace = true }
# Linear algebra (vectors, matrices, rotations)
nalgebra = { workspace = true }
# Data-parallel iterators
rayon = { workspace = true }
# Core physics (workspace)
sim-core = { workspace = true }

[dev-dependencies]
# Approximate equality for numeric tests
approx = { workspace = true }
# 3MF round-trip tests + sim-mjcf integration tests + sphere-diagnostic test
# live in `design/cf-design-tests/` (tier L0-integration) so the heavier
# mesh-io[threemf] + sim-mjcf chains stay out of cf-design's L0 dev-graph.
