[package]
name = "cf-design"
description = "Implicit surface design kernel for CortenForge"
keywords = ["sdf", "implicit", "geometry", "design", "cad"]
categories = ["graphics", "mathematics", "algorithms"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.cortenforge]
tier = "L0"

[lints]
workspace = true

# Default-on so existing callers (cf-cast-cli, cf-device-design via
# cf-device-geometry, examples, etc.) keep getting the parallel
# `mesh_adaptive_par` / `mesh_field_adaptive_par` / `build_octree_par`
# surface without changes. Sim-soft + similar L0 tier-capped consumers
# opt out via `default-features = false` to drop the rayon transitive
# chain (rayon + rayon-core + crossbeam-{deque,epoch,utils}) and stay
# under the L0 100-dep tier cap. Sequential `mesh_adaptive` /
# `mesh_field_adaptive` remain unconditional.
[features]
default = ["parallel-meshing"]
parallel-meshing = ["dep:rayon"]

[dependencies]
# Geometric primitives (workspace)
cf-geometry = { workspace = true }
# Per-vertex attribute container (Solid::mesh* returns AttributedMesh)
mesh-types = { workspace = true }
# Linear algebra (vectors, matrices, rotations)
nalgebra = { workspace = true }
# Data-parallel iterators — gated behind `parallel-meshing` (default-on).
# The parallel mesh helpers (`mesh_adaptive_par` etc.) live only under
# this feature; sequential variants (`mesh_adaptive`) are always
# available. L0-tier consumers near the dep-count cap drop the
# feature via `default-features = false`.
rayon = { workspace = true, optional = true }
# Core physics (workspace)
sim-core = { workspace = true }

[dev-dependencies]
# Approximate equality for numeric tests
approx = { workspace = true }
# mesh-sdf metrics (`surface_deviation_to_sdf` + `DeviationReport` +
# `SampleOptions`) for the test-only mesher-fidelity harness
# (`mesher_fidelity`, a `#[cfg(test)]` module), plus `Signed` /
# `TriMeshDistance` / `PseudoNormalSign` in `solid_layered` unit tests.
# The `Sdf` trait itself lives in cf-geometry and the blanket
# `impl Sdf for Signed<D, S>` lives in mesh-sdf, so no non-test build
# path references this crate — hence dev-only.
mesh-sdf = { workspace = true }
# 3MF round-trip tests + sim-mjcf integration tests + sphere-diagnostic test
# live in `design/cf-design-tests/` (tier L0-integration) so the heavier
# mesh-io[threemf] + sim-mjcf chains stay out of cf-design's L0 dev-graph.
