[package]
name = "cf-device-geometry"
description = "Shared device-side geometric primitives — cached scan SDF + per-iso marching-cubes extraction (`sdf_layers`), shared cavity-render helpers (`spawn_cavity_mesh`, `build_bevy_mesh_from_indexed*`, `CavityEntity`), and the clip-plane material/plugin/state. Consumed by cf-device-design (CAD tool) and cf-sim-research (Phase 3 sim viewer) so both binaries share one SDF cache + iso-extraction path + clip-plane visualization. Lifted out of `tools/cf-device-design/src/{sdf_layers.rs,clip_plane.rs,main.rs}` per `docs/SIM_DECOUPLE_PHASE_3_RECON.md` §2.5.b-d."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

# Shared workspace-internal compute + rendering primitives crate
# (precedent: cf-bevy-common, cf-device-types). No
# `[package.metadata.cortenforge]` tier block — tier metadata is
# reserved for sim L0/L1 libraries (xtask Layer Integrity grader
# exempts shared support crates by name; see
# `xtask/src/grade.rs::applies_to_crate`).

# Lenient lint posture per [[feedback-lint-posture-on-extract]] —
# workspace `pedantic = warn` is NOT inherited because the lifted
# `sdf_layers` + `clip_plane` modules (Phase 2.5.c + 2.5.d) carry
# verbose pre-existing docstrings + match-same-arms in the marching-
# cubes config that would generate pedantic warnings on extraction.
# Mirrors cf-device-design / cf-device-types posture.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
# Bevy — feature set for `ExtendedMaterial` (clip_plane in 2.5.d)
# + `Resource` derive (sdf_layers + clip_plane in 2.5.c+d).
# `bevy_pbr` brings `StandardMaterial` + `ExtendedMaterial` +
# `MaterialPlugin`; `bevy_render` brings `AsBindGroup` + shader
# infrastructure; `bevy_asset` brings `Asset` derive + the
# `embedded_asset!` macro that loads `clip_plane.wgsl`. Binary
# Cargo.toml features always superset this minimal set per R4
# mitigation (`docs/SIM_DECOUPLE_PHASE_3_RECON.md` §4 R4).
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
] }

# egui — `render_clip_plane_section` is a `&mut egui::Ui` panel
# section both binaries render (cf-device-design Sim panel sibling,
# cf-sim-research Phase 3 panel). Workspace-validated pin matches
# cf-device-design / cf-scan-prep / cf-viewer.
bevy_egui = { version = "0.39.1", default-features = false, features = [
    "default_fonts",
    "render",
    "bevy_ui",
] }

# Workspace internal deps.
# `UpAxis` for the render-frame conversion in `update_clip_plane_uniform`.
cf-bevy-common = { workspace = true }
# `RenderScale` for the same uniform conversion.
cf-viewer = { workspace = true }
# `Centerline` resource for the clip-plane resolution math.
cf-device-types = { workspace = true }
# `Point3` / `Vector3` for the centerline + plane math.
mesh-types = { workspace = true }

# 2.5.c populates `sdf_layers` (adds mesh-sdf + mesh-offset +
# cf-cap-planes + cf-design + mesh-repair + meshopt + nalgebra +
# anyhow); those deps land then.
