[package]
name = "cf-device-types"
description = "Shared device-design domain types — cavity + layer-stack state, scan resources, centerline, sim-design projection, slacker recipe data. Consumed by cf-device-design (CAD tool) and (Phase 2+) cf-sim-research so both binaries describe a layered-silicone device the same way. Lifted out of `tools/cf-device-design/src/main.rs` per `docs/SIM_DECOUPLE_REFACTOR_PLAN.md` §3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

# Shared workspace-internal types crate (precedent: cf-bevy-common,
# cf-cap-planes). No `[package.metadata.cortenforge]` tier block —
# tier metadata is reserved for sim L0/L1 libraries (xtask Layer
# Integrity grader exempts shared support crates by name; see
# `xtask/src/grade.rs::applies_to_crate`).

# Matches cf-device-design's lint posture (the crate this code was
# lifted out of). Workspace `pedantic = warn` is intentionally NOT
# inherited because the moved code (CavityState's MAINTENANCE NOTE
# paragraph, the slacker TB tables' verbose docs, the LayerSpec
# slider-range rationale) was authored against the binary's lenient
# posture and would generate ~20 pre-existing pedantic warnings
# (long-doc-first-paragraph + missing-const-fn + match-same-arms in
# slacker::support) on extraction.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[features]
# Off by default → a headless, types-only crate. Enabling `bevy` adds
# the `#[derive(Resource)]` on the resource types for the Bevy crates.
default = []
bevy = ["dep:bevy"]

[dependencies]
# Optional Bevy `#[derive(Resource)]` for the resource types
# (`ScanMesh`, `CavityState`, `LayersState`, `Centerline`, `ScanInfo`,
# `ScanFilePath`, `ScanMeshVisible`), gated behind the `bevy` feature
# so this stays a headless, types-only crate by default. Headless
# consumers (e.g. cf-studio-core) depend with `default-features = false`
# and never pull Bevy; the Bevy crates (cf-device-design,
# cf-sim-research, cf-device-geometry) opt in via `features = ["bevy"]`.
bevy = { workspace = true, default-features = false, optional = true }

# `IndexedMesh` for `ScanMesh`; `Point3` for `Centerline::points_m`.
mesh-types = { workspace = true }

# `Point3` constructor used by `Centerline` consumers + tests.
nalgebra = { workspace = true }

# `.design.toml` Save/Open — `serde` derives on the schema structs,
# `toml` for the read/write surface, `anyhow` for `Result<()>` +
# error-context chaining. Lifted from cf-device-design's
# `design_toml` module per `docs/archive/SIM_DECOUPLE_PHASE_3_RECON.md` §2.5.a
# so cf-sim-research can ingest the same design files.
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
