[package]
name = "cf-geometry"
description = "Shared geometric kernel for CortenForge"
keywords = ["geometry", "sdf", "3d", "kernel", "cad"]
categories = ["mathematics", "graphics", "algorithms"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.cortenforge]
tier = "L0"

[lints]
workspace = true

[dependencies]
# Linear algebra (vectors, matrices, rotations)
nalgebra = { workspace = true }
# Serialization for save/load and config
serde = { workspace = true, optional = true }

[dev-dependencies]
# Approximate equality for numeric tests
approx = { workspace = true }

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize"]
